# cosmic-ideapad-applet

./: Cargo.toml  LICENSE  README.md  justfile  screenshot
data/: 10-ideapad-applet.rules  com.ferreroianjose.ideapad-applet.desktop  com.ferreroianjose.ideapad-applet.policy
src/: helper.rs  ideapad_laptop.rs  main.rs  window.rs
